@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 
 from pydwd.crawler.basecrawler import BaseCrawler
-from pydwd.utils import ftphelper
+from pydwd.utils import ftphelper, translator
 from pydwd.parser import weatherparser
 
 
@@ -9,11 +9,11 @@ class HourlyCrawler(BaseCrawler):
     def __init__(self):
         self._host = 'ftp-cdc.dwd.de'
         self._station_file = 'TU_Stundenwerte_Beschreibung_Stationen.txt'
-        self._data_path = '/pub/CDC/observations_germany/climate/hourly/air_temperature/recent/'
+        self._data_path = '/pub/CDC/observations_germany/climate/hourly'
         BaseCrawler.__init__(self)
 
     def __get_weather__(self, id):
-        url = 'ftp://' + self._host + '/pub/CDC/observations_germany/climate/hourly'
+        url = 'ftp://' + self._host + self._data_path
         _id = '%05d' % int(id)
 
         # temperature file path
@@ -27,22 +27,23 @@ class HourlyCrawler(BaseCrawler):
         # pressure file path
         pres_path = '/pressure/recent/stundenwerte_P0_' + _id + '_akt.zip'
 
-        temp_file = 'produkt_temp_Terminwerte_'
-        wind_file = 'produkt_wind_Terminwerte_'
-        # (c)loud, (p)reciption, (p)ressure
-        c_p_p_file = 'produkt_synop_Terminwerte_'
+        temp_file = 'produkt_tu_stunde_'
+        wind_file = 'produkt_ff_stunde_'
+        clou_file = 'produkt_n_stunde_'
+        prec_file = 'produkt_rr_stunde_'
+        pres_file = 'produkt_p0_stunde_'
 
         url_dict = {'temperature': [url + temp_path, temp_file],
                     'wind': [url + wind_path, wind_file],
-                    'cloudiness': [url + clou_path, c_p_p_file],
-                    'precipitation': [url + prec_path, c_p_p_file],
-                    'pressure': [url + pres_path, c_p_p_file]}
+                    'cloudiness': [url + clou_path, clou_file],
+                    'precipitation': [url + prec_path, prec_file],
+                    'pressure': [url + pres_path, pres_file]}
 
         result = {}
         for key, value in url_dict.iteritems():
             content = ftphelper.get_file_txt_zip(value[0], value[1])
             if content:
-                result[key] = weatherparser.parse(content)
+                result[key] = weatherparser.parse(content, translation='en-hourly')
             else:
                 result[key] = {}
         return result
