@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 
 from pydwd.crawler.basecrawler import BaseCrawler
-from pydwd.utils import ftphelper
+from pydwd.utils import ftphelper, translator
 from pydwd.parser import weatherparser
 
 
@@ -13,8 +13,8 @@ class MonthlyCrawler(BaseCrawler):
         BaseCrawler.__init__(self)
 
     def __get_weather__(self, id):
-        file_name = 'produkt_monat_Monatswerte_'
-        archive_name = 'monatswerte_' + '%05d' % int(id) + '_akt.zip'
+        file_name = 'produkt_klima_monat_'
+        archive_name = 'monatswerte_KL_' + '%05d' % int(id) + '_akt.zip'
         file_url = 'ftp://' + self._host + self._data_path + archive_name
         content = ftphelper.get_file_txt_zip(file_url, file_name)
-        return weatherparser.parse(content)
+        return weatherparser.parse(content, translation='en-monthly')
