@@ -1,108 +1,0 @@
-[en]
-art=type
-bedeckungsgrad=cloud_coverage
-bis_datum=till_date
-bundesland=federal_state
-dampfdruck=vapour_pressure
-datum=date
-datum Stationsaufloesung=date_end_of_station
-geoBreite=latitude
-geograph.breite=latitude
-geoLaenge=longitude
-geograph.laenge=longitude
-gesamt_bedeckungsgrad=sum_coverage
-id=id
-luftdruck_stationshoehe=air_pressure_at_station
-luftdruck_reduziert=atmospheric_pressure_reduced
-lufttemperatur=air_temperature
-lufttemperatur_maximum=max_air_temperature
-lufttemperatur_minimum=min_air_temperature
-lufttemp_am_erdb_minimum=min_soil_air_temperature
-max(LUFTTEMPERATUR_MAXIMUM)=max_air_temperature 
-max(NIEDERSCHLAGSHOEHE)=max_precipitation_height
-max(WINDSPITZE_MAXIMUM)=max_wind_force
-mess_datum=measurement_date
-mess_datum_beginn=measurement_date_start
-mess_datum_ende=measurement_date_end
-min(LUFTTEMPERATUR_MINIMUM)=min_air_temperature 
-naturraum=natural_environment
-naturraumgruppe=natural_environment_group
-niederschlagshoehe=precipitation_height 
-niederschlagshoehe_ind=precipitation_height_ind
-niederschlag_gefallen_ind=preciption_ind
-niederschlagsform=preciption_form
-qualitaets_niveau=quality_level
-rel_feuchte=relative_humidity
-schneehoehe=snow_height
-stationshoehe=station_height
-stationsname=station_name
-stations_id=id
-struktur_version=structure_version
-sonnenscheindauer=sunshine_duration
-windgeschwindigkeit=wind_speed
-windrichtung=wind_direction
-windspitze_maximum=max_wind_speed
-windstaerke=wind_force
-vgsl=VGSL
-von_datum=from_date
-vpgb=VPGB
-vpgh=VPGH
-ts05=TS05
-ts10=TS10
-ts20=TS20
-ts50=TS50
-ts100=TS100
-zfumi=ZFUMI
-bf10=BF10
-bf20=BF20
-bf30=BF30
-bf40=BF40
-bf50=BF50
-bf60=BF60
-bfgsl=BFGSL
-bfgls=BFGLS
-
-[en-desc]
-bedeckungsgrad=cloud coverage
-bundesland=federal state
-dampfdruck=vapour pressure
-datum=date
-datum Stationsaufloesung=end of station date
-geograph.breite=latitude
-geograph.laenge=longitude
-luftdruck_stationshoehe=air pressure at station
-lufttemperatur=air temperature
-lufttemperatur_maximum=max air temperature
-lufttemperatur_minimum=min air temperature
-lufttemp_am_erdb_minimum=min soil air temperature
-mess_datum=measurement date
-naturraum=natural environment
-naturraumgruppe=natural environment group
-niederschlagshoehe=precipitation height 
-niederschlagshoehe_ind=precipitation height ind 
-qualitaets_niveau=quality level
-rel_feuchte=relative humidity
-schneehoehe=snow height
-stationshoehe=station height
-stationsname=station name
-stations_id=station id
-sonnenscheindauer=sunshine duration
-windgeschwindigkeit=wind speed
-windspitze_maximum=max wind speed
-vgsl=real evapotranspiration over gras and sandy loam (AMBAV) in mm
-vpgb=potential evapotranspiration over gras (AMBAV) in mm
-vpgh=potential evaporation over gras (Haude) VPGH in mm
-ts05=mean daily soil temperature in 5 cm depth for uncovered typical soil in 5 cm depth in celsius
-ts10=mean daily soil temperature in 5 cm depth for uncovered typical soil in 10 cm depth in celsius
-ts20=mean daily soil temperature in 5 cm depth for uncovered typical soil in 20 cm depth in celsius
-ts50=mean daily soil temperature in 5 cm depth for uncovered typical soil in 50 cm depth in celsius
-ts100=mean daily soil temperature in 5 cm depth for uncovered typical soil in 100 cm depth in celsius
-zfumi=frost depth at midday for uncovered soil in cm
-bf10=soil moisture under grass and sandy loam between 0 and 10 cm depth in %
-bf20=plant useable water soil moisture under grass and sandy loam between 10 and 20 cm depth in %
-bf30=plant useable water soil moisture under grass and sandy loam between 20 and 30 cm depth in %
-bf40=plant useable water soil moisture under grass and sandy loam between 30 and 40 cm depth in %
-bf50=plant useable water soil moisture under grass and sandy loam between 40 and 50 cm depth in %
-bf60=plant useable water soil moisture under grass and sandy loam between 50 and 60 cm depth in %
-bfgsl=soil moisture under grass and sandy loam up to 60 cm depth in %
-bfgls=soil moisture under grass and loamy sand up to 60 cm depth in %
