@@ -1,0 +1,71 @@
+[en-station]
+Stations_id=station_id
+von_datum=from_time
+bis_datum=till_time
+Stationshoehe=station_height
+geoBreite=latitude
+geoLaenge=longitude
+Stationsname=station_name
+Bundesland=federal_state
+[en-hourly]
+# ftp://ftp-cdc.dwd.de/pub/CDC/observations_germany/climate/hourly/air_temperature/recent/DESCRIPTION_obsgermany_climate_hourly_tu_recent_en.pdf
+STATIONS_ID=station_identification_number
+MESS_DATUM=measurement_time
+QN_9=quality_level_of_next_columns
+TT_TU=2m_air_temperature_(C)
+RF_TU=2m_relative_humidity_(%)
+[en-daily]
+# ftp://ftp-cdc.dwd.de/pub/CDC/observations_germany/climate/daily/kl/recent/DESCRIPTION_obsgermany_climate_daily_kl_recent_en.pdf
+STATIONS_ID=station_id
+MESS_DATUM=date
+QN_3=quality_level_of_next_columns
+FX=daily_maximum_of_wind_gust_(m/s)
+FM=daily mean of wind velocity_(m/s)
+QN_4=quality_level_of_next_columns
+RSK=daily_precipitation_height_(mm)
+RSKF=precipitation_form
+SDK=daily_sunshine_duration_(h)
+SHK_TAG=daily_snow_depth_(cm)
+NM=daily_mean_of_cloud_cover_(1/8)
+VPM=daily_mean_of_vapor_pressure_(hPa)
+PM=daily_mean_of_pressure_(hPa)
+TMK=daily_mean_of_temperature_(C)
+UPM=daily_mean_of_relative_humidity(%)
+TXK=daily_maximum_of_temperature_at_2m_height_(C)
+TNK=daily_minimum_of_temperature_at_2m_height_(C)
+TGK=daily_minimum_of_air_temperature_at_5cm_above_ground_(C)
+[en-monthly]
+# ftp://ftp-cdc.dwd.de/pub/CDC/observations_germany/climate/monthly/kl/recent/DESCRIPTION_obsgermany_climate_monthly_kl_recent_en.pdf
+STATIONS_ID=station_id
+MESS_DATUM_BEGINN=begin_of_interval_(yyyymmdd)
+MESS_DATUM_ENDE=end_of_interval_(yyyymmdd)
+QN_4=quality_level_of_next_columns
+MO_N=monthly_mean_of_cloud_cover_(1/8)
+MO_TT=monthly_mean_of_daily_temperature_means_in_2m_height_(C)
+MO_TX=monthly_mean_of_daily_temperature_maxima_in_2m_height_(C)
+MO_TN=monthly_mean_of_daily_temperature_minima_in 2m_height_(C)
+MO_SD_S=monthly_sum_of_sunshine_duration_(h)
+MO_FK=monthly_mean_of_daily_wind speed_(Bft)
+MX_TX=monthly_maximum_of_daily_temperature_maxima_in_2m_height_(C)
+MX_FX=monthly_maximum_of_daily_wind speed(m/sec)
+MX_TN=monthly_minimum_of_daily_temperature_minima_in_2m_height(C)
+QN_6=quality_level_of_next_columns
+MO_RR=monthly_sum_of_precipitation_height_(mm)
+MX_RS=monthly_maximum_of_daily_precipitation_height_mm)
+[en-climate-quality-level]
+1=only formal control
+2=controlled with individually defined criteria
+3=automatic control and correction
+5=historic, subjective procedures
+7=second control done, before correction
+8=quality control outside ROUTINE
+9=not all parameters corrected
+10=quality control finished, all corrections finished
+[en-climate-precipitation-form]
+0=no precipitation (conventional or automatic measurement), relates to WMO code 10
+1=only rain (before 1979)
+4=unknown form of recorded precipitation
+6=only rain; only liquid precipitation at automatic stations, relates to WMO code 11
+7=only snow; only solid precipitation at automatic stations, relates to WMO code 12
+8=rain and snow (and/or "Schneeregen"); liquid and solid precipitation at automatic stations, relates to WMO code 13
+9=error or missing value or no automatic determination of precipitation form, relates to WMO code 15
